// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ejercicio 4 - La View de /home 1) Renderiza 1`] = `
<DocumentFragment>
  <div
    class="demo"
  >
    <h2>
      Productos
    </h2>
    <ul />
  </div>
</DocumentFragment>
`;

exports[`Ejericitación Integradora - La View de /home 1) Renderiza 1`] = `
<DocumentFragment>
  <div
    class="demo"
  >
    <h2>
      Productos
    </h2>
    <ul>
      <li>
        Motorola
      </li>
      <li>
        Samsung
      </li>
      <li>
        Huawei
      </li>
      <li>
        iPhone
      </li>
      <li>
        Samsung2
      </li>
      <li>
        Nokia
      </li>
      <li>
        LG
      </li>
      <li>
        Sony
      </li>
      <li>
        Motorola2
      </li>
      <li>
        Moto-G
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
